--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                             <ul class="login__form">
                                 <li><input type="text" placeholder="帳號"></li>
                                 <li><input type="text" placeholder="密碼"></li>
-                                <li><input type="text" placeholder="帳號"></li>
-                                <li><input type="text" placeholder="密碼"></li>
+                                <li><input type="text" placeholder="再次輸入密碼"></li>
+                                <li><input type="text" placeholder="電話號碼"></li>
                             </ul>
                             <button class="login--btn">
                                <img src="images/text_submit.png" alt="">
