change btn style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                            
                         </div> -->
                         <button class="login--btn">
-                            <img src="images/text_enter.png" alt="">
+                            <!-- <img src="images/text_enter.png" alt=""> -->
                          </button>
                       </div>
                     
